# holochain_roles

./: .gitignore  Cargo.toml  LICENSE  README.md
dna/test/: index.js  utils.js
dna/zomes/roles/code/: Cargo.toml
dna/zomes/roles/code/src/: admins.rs  assignment.rs  lib.rs  role.rs  utils.rs  validation.rs
example-dna/: alice.keystore  bob.keystore  carol.keystore  conductor-config.toml  config.nix
example-dna/test/: index.js  package-lock.json  utils.js
example-dna/zomes/example/code/: Cargo.toml
example-dna/zomes/example/code/src/: lib.rs
example-dna/zomes/example/code/src/roles/: handlers.rs  mod.rs  validation.rs
src/: handlers.rs  lib.rs  progenitor.rs  validation.rs
