[package]
name = "holochain_roles"
version = "0.1.0"
authors = ["guillem <guillem.cordoba@gmail.com>"]
repository = "https://github.com/guillemcordoba/holochain_roles"
edition = "2018"

[dependencies]
hdk = "0.0.42-alpha5"
serde_derive = "1.0.89"
serde_json = { version = "=1.0.39", features = ["preserve_order"] }
holochain_json_derive = "=0.0.17"
serde = "=1.0.89"
