[package]
name = "hc_roles_mixin"
version = "0.1.3"
authors = ["guillem <guillem.cordoba@gmail.com>"]
edition = "2018"
description = "A crate to help hApps add roles to their DNA using the progenitor pattern"
repository = "https://github.com/eyss/hc_roles_mixin"
documentation = "https://docs.rs/hc_roles_mixin"
license-file = "LICENSE"
exclude = [
    "example-dna/*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "=1.0.89"
serde_json = { version = "=1.0.39", features = ["preserve_order"] }
serde_derive = "=1.0.89"
hdk = "=0.0.42-alpha3"
hdk_proc_macros = "=0.0.42-alpha3"
holochain_wasm_utils = "=0.0.42-alpha3"
holochain_json_derive = "=0.0.17"
holochain_anchors = "=0.2.1"

