[package]
name = "holochain_roles"
version = "0.1.7"
authors = ["guillem <guillem.cordoba@gmail.com>"]
edition = "2018"
description = "A crate to help hApps add roles to their DNA using the progenitor pattern"
repository = "https://github.com/eyss/holochain_roles"
documentation = "https://docs.rs/holochain_roles"
license-file = "LICENSE"
exclude = [
    "example-dna/*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "^1.0"
serde_json = { version = "^1.0", features = ["preserve_order"] }
serde_derive = "^1.0"
hdk = "=0.0.44-alpha3"
hdk_proc_macros = "=0.0.44-alpha3"
holochain_wasm_utils = "=0.0.44-alpha3"
holochain_json_derive = "^0.0"
holochain_anchors = { git = "https://github.com/eyss/holochain_anchors" }
